--- a/src/main/resources/static/account.css
+++ b/src/main/resources/static/account.css
@@ -9,76 +9,17 @@ h3,
 h4,
 h5,
 h6 {
-    color: #5c5b5b
+    color: var(--text-color);
+}
+p{
+    color: var(--text-color);
 }
 body {
-    background: #f6f6f6;
+    background: var(--background-color);
 }
 a {
     text-decoration: none;
     color: inherit;
-}
-
-/* Стили для шапки */
-header {
-    background-color: var(--main-color);
-    padding: 10px;
-    height: 80px;
-    float: left;
-}
-*header {
-    color: #000000;
-}
-header h1 {
-    margin-top: 6px;
-}
-header h1 a {
-    color: #000000;
-    text-decoration: none;
-}
-header h1 a:hover {
-    color: #000000;
-}
-header ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    float: right;
-}
-header ul li {
-    float: left;
-    position: relative;
-}
-header ul li a {
-    display: block;
-    font-size: 1.2rem;
-    text-decoration: none;
-    color: #000000;
-    padding: 20px;
-}
-header ul li a:hover {
-    background: var(--main-color);
-    transition: 0.5s;
-    color: #000;
-}
-header ul li ul {
-    position: absolute;
-    top: 70px;
-    right: 0px;
-    width: 160px;
-    display: none;
-    z-index: 111;
-}
-header ul li:hover ul {
-    display: block;
-}
-header ul li ul li {
-    width: 100%;
-}
-header ul li ul li a {
-    padding: 10px;
-    background: white;
-    color: var(--main-color);
 }
 
 /* Стили для аккаунта */
@@ -247,4 +188,117 @@ input[type="file"] {
     background: var(--main-color);
     width: 500px;
     height: 20px;
+}
+.button{
+    background: var(--main-color);
+}
+/*переключатель темы*/
+#toggle_checkbox
+{
+    display: none;
+}
+
+label
+{
+    position: absolute;
+    top: 50%;
+    right: 0;
+    left: 0;
+    width: 116px;
+    height: 56px;
+    margin: 0 auto;
+    background-color: #fff;
+    border-radius: 56px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    transition: 0.3s ease background-color;
+    overflow: hidden;
+}
+
+#star
+{
+    position: absolute;
+    top: 13px;
+    left: 13px;
+    width: 30px;
+    height: 30px;
+    background-color: #fafd0f;
+    transform: scale(1);
+    border-radius: 50%;
+    transition: 0.3s ease top, 0.3s ease left, 0.3s ease transform, 0.3s ease background-color;
+    z-index: 1;
+}
+
+#star-1
+{
+    position: relative;
+}
+
+#star-2
+{
+    position: absolute;
+    transform: rotateZ(36deg);
+}
+
+.star
+{
+    top: 0;
+    left: -7px;
+    font-size: 54px;
+    line-height: 28px;
+    color: #fafd0f;
+    transition: 0.3s ease color;
+}
+
+#moon
+{
+    position: absolute;
+    bottom: -52px;
+    right: 8px;
+    width: 40px;
+    height: 40px;
+    background-color: #fff;
+    border-radius: 50%;
+    transition: 0.3s ease bottom;
+}
+
+#moon:before
+{
+    content: "";
+    position: absolute;
+    top: -12px;
+    left: -17px;
+    width: 40px;
+    height: 40px;
+    background-color:#fff;
+    border-radius: 50%;
+    transition: 0.3s ease background-color;
+}
+
+#toggle_checkbox:checked + label
+{
+    background-color: #000;
+}
+
+#toggle_checkbox:checked + label #star
+{
+    top: 3px;
+    left: 64px;
+    transform: scale(0.3);
+    background-color: yellow;
+}
+
+#toggle_checkbox:checked + label .star
+{
+    color: yellow;
+}
+
+#toggle_checkbox:checked + label #moon
+{
+    bottom: 8px;
+}
+
+#toggle_checkbox:checked + label #moon:before
+{
+    background-color: #000;
 }
