--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -12,75 +12,12 @@ h6 {
     color: #5c5b5b
 }
 body {
-    background: #f6f6f6;
+    background: var(--background-color);
 }
 a {
     text-decoration: none;
     color: inherit;
 }
-
-/* Стили для шапки */
-header {
-    background-color: var(--main-color);
-    padding: 10px;
-    height: 80px;
-    float: left;
-}
-*header {
-    color: #000000;
-}
-header h1 {
-    margin-top: 6px;
-}
-header h1 a {
-    color: #000000;
-    text-decoration: none;
-}
-header h1 a:hover {
-     color: #000000;
-}
-header ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    float: right;
-}
-header ul li {
-    float: left;
-    position: relative;
-}
-header ul li a {
-    display: block;
-    font-size: 1.2rem;
-    text-decoration: none;
-    color: #000000;
-    padding: 20px;
-}
-header ul li a:hover {
-    background: var(--main-color);
-    transition: 0.5s;
-    color: #000;
-}
-header ul li ul {
-    position: absolute;
-    top: 70px;
-    right: 0px;
-    width: 160px;
-    display: none;
-    z-index: 111;
-}
-header ul li:hover ul {
-    display: block;
-}
-header ul li ul li {
-    width: 100%;
-}
-header ul li ul li a {
-    padding: 10px;
-    background: white;
-    color: var(--main-color);
-}
-
 /* Стили для подвала */
 .footer {
     background-color: #333;
