--- a/src/main/resources/templates/authorization.html
+++ b/src/main/resources/templates/authorization.html
@@ -4,6 +4,7 @@
   <title>IG</title>
   <link rel="stylesheet" th:href="@{/authorization.css}" />
   <link rel="stylesheet" th:href="@{/color.css}" />
+  <link rel="stylesheet" th:href="@{/header.css}"/>
   <!--Картинки-->
   <script src="https://kit.fontawesome.com/9e56eb5395.js" crossorigin="anonymous"></script>
 
@@ -19,7 +20,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
 
 </head>
-<body>
+<body style="background: var(--background-color);">
 <header class="container-fluid">
   <div class="container">
     <div class="row">
