--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
     <title>IG</title>
     <link rel="stylesheet" th:href="@{/style.css}" />
     <link rel="stylesheet" th:href="@{/color.css}" />
+    <link rel="stylesheet" th:href="@{/header.css}"/>
     <!--Картинки-->
     <script src="https://kit.fontawesome.com/9e56eb5395.js" crossorigin="anonymous"></script>
 
@@ -19,7 +20,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
 
 </head>
-<body>
+<body style="background: var(--background-color);">
 <header class="container-fluid">
     <div class="container">
         <div class="row">
@@ -116,6 +117,14 @@
     document.addEventListener('DOMContentLoaded', function() {
         document.documentElement.style.setProperty('--main-color', getCookie("mainColor"));
         document.documentElement.style.setProperty('--second-color', getCookie("secondColor"));
+        if (getCookie("theme") === "white"){
+            document.documentElement.style.setProperty('--background-color', "#fff");
+            document.documentElement.style.setProperty('--text-color', "#000");
+        }
+        else{
+            document.documentElement.style.setProperty('--background-color', "#28292c");
+            document.documentElement.style.setProperty('--text-color', "#fff");
+        }
         document.getElementsByTagName("html")[0].style.visibility = "visible";
     }, false);
 </script>
